fixed compile on java 1.4
git-svn-id: http://microemu.googlecode.com/svn/trunk@1441 272dc960-a678-11de-8dbb-b5444cbab91d