@@ -82,11 +82,11 @@ public class J2SEDeviceButtonsHelper {
 
 	public static J2SEButton getButton(KeyEvent ev) {
 		DeviceInformation inf = getDeviceInformation();
-		J2SEButton button = (J2SEButton) inf.keyboardCharCodes.get(Integer.valueOf(ev.getKeyChar()));
+		J2SEButton button = (J2SEButton) inf.keyboardCharCodes.get(new Integer(ev.getKeyChar()));
 		if (button != null) {
 			return button;
 		}
-		return (J2SEButton) inf.keyboardKeyCodes.get(Integer.valueOf(ev.getKeyCode()));
+		return (J2SEButton) inf.keyboardKeyCodes.get(new Integer(ev.getKeyCode()));
 	}
 
 	public static J2SEButton getButton(ButtonName functionalName) {
@@ -113,11 +113,11 @@ public class J2SEDeviceButtonsHelper {
 			J2SEButton button = (J2SEButton) en.nextElement();
 			int keyCodes[] = button.getKeyboardKeyCodes();
 			for (int i = 0; i < keyCodes.length; i++) {
-				inf.keyboardKeyCodes.put(Integer.valueOf(keyCodes[i]), button);
+				inf.keyboardKeyCodes.put(new Integer(keyCodes[i]), button);
 			}
 			char charCodes[] = button.getKeyboardCharCodes();
 			for (int i = 0; i < charCodes.length; i++) {
-				inf.keyboardCharCodes.put(Integer.valueOf(charCodes[i]), button);
+				inf.keyboardCharCodes.put(new Integer(charCodes[i]), button);
 			}
 			inf.functions.put(button.getFunctionalName(), button);
 			if (button.isModeChange()) {
